package org.dedda.games.scheisse.gui.cpu.inventory;

/**
 * Created by dedda on 11/30/14.
 */
public interface InventoryTransactionListener {

    public abstract void transactionPerformed(final InventoryTransactionEvent event);

}
