@startuml
class javax.swing.JPanel
interface org.dedda.games.scheisse.gui.cpu.inventory.InventoryTransactionListener
interface javax.swing.event.ChangeListener

class org.dedda.games.scheisse.gui.cpu.inventory.HeaderBar{
    - Player player
    - Inventory inventory
    - List<CategoriesChangeListener> changeListeners
    - List<JCheckBox> checkBoxes
    + HeaderBar(Player)
    + void addCategoriesChangeListener(CategoriesChangeListener)
    + void removeCategoriesChangeListener(CategoriesChangeListener)
    - void categoryAdded(int)
    - void categoryRemoved(int)
    - void categoriesChanged(CategoriesChangedEvent)
    + void transactionPerformed(InventoryTransactionEvent)
    + void stateChanged(ChangeEvent)
}

javax.swing.JPanel <|-- org.dedda.games.scheisse.gui.cpu.inventory.HeaderBar
org.dedda.games.scheisse.gui.cpu.inventory.InventoryTransactionListener <|.. org.dedda.games.scheisse.gui.cpu.inventory.HeaderBar
javax.swing.event.ChangeListener <|.. org.dedda.games.scheisse.gui.cpu.inventory.HeaderBar
@enduml